--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="Login" class="navbar-brand">CsBeltExam</a>
             </div>
@@ -33,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Dashboard">Dashboard</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="AddNew">AddNew</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="ObjectInfo">ObjectInfo</a></li>
                 </ul>
             </div>
         </div>
