--- a/Views/Home/AddNew.cshtml
+++ b/Views/Home/AddNew.cshtml
@@ -1,3 +1,26 @@
-﻿<div id="addnew">
-    Add New
+﻿<!-- model Product -->
+
+<div id="addnew">
+    <h1>New Product</h1>
+    <form asp-action="AddProduct" asp-controller="Home" method="post">
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                <input type="text" class="form-control" name="Name">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Description</label>
+            <div class="col-sm-10">
+                <textarea rows="3" name="Description"></textarea>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Price</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="Price">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Create</button>
+    </form>
 </div>
