--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,67 +1,71 @@
-﻿<!-- model UserValidator -->
+﻿@model UserValidator
 
 <div id="login">
+    <div class="side">
+        <div class="loginleft">
+            <h1 class="title">Login</h1>
+            <form asp-action="LoginProcess" asp-controller="Home" method="post">
+                <p style="color:red;">@ViewBag.BadPass</p>
+                <p style="color:red;">@ViewBag.NoUser</p>
+                <p style="color:red;">@ViewBag.PassNull</p>
+                <p style="color:red;">@ViewBag.NotLoggedIn</p>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="LUsername">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" name="LPassword">
+                    </div>
+                </div>
+        </div>
+        <div class="loginleft">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+        </form>
+    </div>
     <div class="side">
         <h1 class="title">Register</h1>
         <form asp-action="RegisterProcess" asp-controller="Home" method="post" class="register">
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">First Name:</label>
-                <!-- <span asp-validation-for="FirstName" style="color:red;"></span> -->
+                <label class="col-sm-2 col-form-label">First Name</label>
+                <span asp-validation-for="FirstName" style="color:red;"></span>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="FirstName">
+                    <input type="text" class="form-control" asp-for="FirstName">
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Last Name:</label>
-                <!-- <span asp-validation-for="LastName" style="color:red;"></span> -->
+                <label class="col-sm-2 col-form-label">Last Name</label>
+                <span asp-validation-for="LastName" style="color:red;"></span>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="LastName">
+                    <input type="text" class="form-control" asp-for="LastName">
                 </div>
             </div>
-            <!-- <p style="color:red;">@ViewBag.Error</p> -->
+            <p style="color:red;">@ViewBag.Error</p>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Email:</label>
-                <!-- <span asp-validation-for="Email" style="color:red;"></span> -->
+                <label class="col-sm-2 col-form-label">Username</label>
+                <span asp-validation-for="Username" style="color:red;"></span>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="Email">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Password:</label>
-                <!-- <span asp-validation-for="Password" style="color:red;"></span> -->
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" name="Password">
+                    <input type="text" class="form-control" asp-for="Username">
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">PW Confirm:</label>
+                <label class="col-sm-2 col-form-label">Password</label>
+                <span asp-validation-for="Password" style="color:red;"></span>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" name="ConfirmPassword">
+                    <input type="password" class="form-control" asp-for="Password">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Confirm Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" asp-for="ConfirmPassword">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="side">
-        <h1 class="title">Login</h1>
-        <form asp-action="LoginProcess" asp-controller="Home" method="post">
-            <!-- <p style="color:red;">@ViewBag.BadPass</p>
-            <p style="color:red;">@ViewBag.NoUser</p>
-            <p style="color:red;">@ViewBag.PassNull</p>
-            <p style="color:red;">@ViewBag.NotLoggedIn</p> -->
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Email:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" name="LEmail">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Password:</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" name="LPassword">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
 </div>
