--- a/Views/Home/AddNew.cshtml
+++ b/Views/Home/AddNew.cshtml
@@ -1,24 +1,34 @@
-﻿<!-- model Product -->
+﻿@model Auction
 
 <div id="addnew">
-    <h1>New Product</h1>
-    <form asp-action="AddProduct" asp-controller="Home" method="post">
+    <h1>New Auction</h1>
+    <form asp-action="AddAuction" asp-controller="Home" method="post">
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Name</label>
+            <label class="col-sm-2 col-form-label">Product Name</label>
+            <span asp-validation-for="ProductName" style="color:red;"></span>
                 <div class="col-sm-10">
-                <input type="text" class="form-control" name="Name">
+                <input type="text" class="form-control" asp-for="ProductName">
             </div>
         </div>
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Description</label>
+            <span asp-validation-for="Description" style="color:red;"></span>
             <div class="col-sm-10">
-                <textarea rows="3" name="Description"></textarea>
+                <textarea rows="3" asp-for="Description"></textarea>
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Price</label>
+            <label class="col-sm-2 col-form-label">Starting Bid</label>
+            <span asp-validation-for="TopBid" style="color:red;"></span>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="Price">
+                <input type="text" class="form-control" asp-for="TopBid">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">End Date:</label>
+            <span asp-validation-for="EndDate" style="color:red;"></span>
+            <div class="col-sm-10">
+                <input type="date" class="form-control" asp-for="EndDate">
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Create</button>
