--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Dashboard">Dashboard</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="AddNew">AddNew</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="ObjectInfo">ObjectInfo</a></li>
+                    <li><a href="~/objectinfo/1">ObjectInfo</a></li>
                 </ul>
             </div>
         </div>
