--- a/Views/Home/AddNew.cshtml
+++ b/Views/Home/AddNew.cshtml
@@ -1,36 +1,38 @@
 ﻿@model Auction
 
 <div id="addnew">
-    <h1>New Auction</h1>
+    <div class="topsection">
+        <h1>New Auction</h1>
+        <div class="topright">
+            <h3><a href="~/dashboard">Home</a></h3>
+            <h3><a href="~/logout">Logout</a></h3>
+        </div>
+    </div>
     <form asp-action="AddAuction" asp-controller="Home" method="post">
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Product Name</label>
+    <div class="regside">
+        <div class="form-group">
+            <label>Product Name</label>
             <span asp-validation-for="ProductName" style="color:red;"></span>
-                <div class="col-sm-10">
-                <input type="text" class="form-control" asp-for="ProductName">
-            </div>
+            <input type="text" class="form-control" asp-for="ProductName">
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Description</label>
+        <div class="form-group">
+            <label>Description</label>
             <span asp-validation-for="Description" style="color:red;"></span>
-            <div class="col-sm-10">
-                <textarea rows="3" asp-for="Description"></textarea>
-            </div>
+            <textarea rows="3" asp-for="Description"></textarea>
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Starting Bid</label>
+    </div>
+    <div class="regside rightside">
+        <div class="form-group">
+            <label>Starting Bid</label>
             <span asp-validation-for="TopBid" style="color:red;"></span>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" asp-for="TopBid">
-            </div>
+            <input type="text" class="form-control bid" asp-for="TopBid">
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">End Date:</label>
+        <div class="form-group">
+            <label>End Date:</label>
             <span asp-validation-for="EndDate" style="color:red;"></span>
-            <div class="col-sm-10">
-                <input type="date" class="form-control" asp-for="EndDate">
-            </div>
+            <input type="date" class="form-control enddate" asp-for="EndDate">
         </div>
-        <button type="submit" class="btn btn-primary">Create</button>
+    </div>
+        <button type="submit" class="btn btn-primary">Create Auction</button>
     </form>
 </div>
