--- a/Views/Home/ObjectInfo.cshtml
+++ b/Views/Home/ObjectInfo.cshtml
@@ -4,19 +4,25 @@
     <div class="topsection">
         <h1>@Model.ProductName</h1>
         <h3>Created by: @Model.Creator.FirstName</h3>
-        <h3><a href="~/dashboard">Home</a></h3>
-        <h3><a href="~/logout">Logout</a></h3>
+        <div class="topright">
+            <h3><a href="~/dashboard">Home</a></h3>
+            <h3><a href="~/logout">Logout</a></h3>
+        </div>
     </div>
-    <h3>Time Remaining: !!!2 days!!!</h3>
+    <h3>Time Remaining: @Model.EndDate.Subtract(DateTime.Now).Days days</h3>
     <p>@Model.Description</p>
-    <h3>Current Highest Big:</h3>
-    <h3>$@Model.TopBid</h3>
-    <h3>By @Model.TopBidder.FirstName @Model.TopBidder.LastName</h3>
-    <p style="color:red;">@ViewBag.Balance</p>
-    <p style="color:red;">@ViewBag.TopBid</p>
-    <form asp-action="PlaceBid" asp-controller="Home" asp-method="post">
-        <input type="text" placeholder="Your bid goes here..." name="NewBid">
-        <input type="hidden" name="auctionid" value="@Model.AuctionId">
-        <button type="submit" class="btn btn-primary">Bid!!</button>
-    </form>
+    <div class="infoside">
+        <h3>Current Highest Bid:</h3>
+        <h3 class="topbid">$@Model.TopBid</h3>
+    </div>
+    <div class="infoside">
+        <h3 class="biddername">By @Model.TopBidder.FirstName @Model.TopBidder.LastName</h3>
+        <p style="color:red;">@ViewBag.Balance</p>
+        <p style="color:red;">@ViewBag.TopBid</p>
+        <form asp-action="PlaceBid" asp-controller="Home" asp-method="post">
+            <input type="number" step="0.01" placeholder="Your bid goes here..." name="NewBid">
+            <input type="hidden" name="auctionid" value="@Model.AuctionId">
+            <button type="submit" class="btn btn-primary">Bid!!</button>
+        </form>
+    </div>
 </div>
